Move search outside greedy-nav to prevent it from being hidden
The greedy-nav JS moves the last visible-links items into a hidden
dropdown when the nav overflows. Search was always the first to go.
Now placed outside the nav as an absolutely positioned element in
the masthead menu, so greedy-nav cannot touch it.

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -37,6 +37,7 @@
 }
 
 .masthead__menu {
+  position: relative;
 
   ul {
     margin: 0;
@@ -59,10 +60,11 @@
 
 /* Search toggle and dropdown */
 .search-toggle-wrapper {
-  display: inline-block;
-  position: relative;
-  vertical-align: middle;
-  margin-left: 0.5em;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 20;
 }
 
 .search-toggle {
